--- a/environment.yaml
+++ b/environment.yaml
@@ -4,6 +4,7 @@ channels:
   - ekirving
   - defaults
 dependencies:
+  - admixtools=7.0.2
   - bcftools=1.11
   - bedtools=2.29.2
   - biopython=1.78
@@ -15,6 +16,7 @@ dependencies:
   - numpy=1.19.2
   - pandas=1.1.3
   - pip=20.2.4
+  - plink=1.90b6.2
   - pot=0.7.0
   - progressbar=2.5
   - pysam=0.16.0.1
@@ -60,6 +62,7 @@ dependencies:
   - r-stringr=1.4.0
   - r-styler=1.3.2
   - r-tidyr=1.1.2
+  - r-vcfr=1.12.0
   - r-viridis=0.5.1
   - r-zoo=1.8_6
   - requests=2.24.0
