--- a/environment.yaml
+++ b/environment.yaml
@@ -15,6 +15,7 @@ dependencies:
   - numba=0.51.2
   - numpy=1.19.2
   - pandas=1.1.3
+  - parallel=20230122
   - pip=20.2.4
   - plink=1.90b6.21
   - pot=0.7.0
@@ -43,6 +44,7 @@ dependencies:
   - r-ggridges=0.5.2
   - r-googlesheets4=0.2.0
   - r-gtools=3.8.2
+  - r-hmisc=4.5_0
   - r-jquerylib=0.1.4
   - r-jsonlite=1.7.1
   - r-kableextra=1.3.1
