--- a/environment.yaml
+++ b/environment.yaml
@@ -1,19 +1,21 @@
 channels:
-  - bioconda
   - conda-forge
-  - ekirving
+  - bioconda
   - defaults
 dependencies:
   - admixtools=7.0.2
   - bcftools=1.11
   - bedtools=2.29.2
   - biopython=1.78
+  - ca-certificates=2022.12.7
+  - certifi=2022.12.7
   - click=7.1.2
-  - curl=7.71.1
+  - curl=7.86.0
   - matplotlib=3.3.2
   - msprime=0.7.4
   - numba=0.51.2
   - numpy=1.19.2
+  - openssl=1.1.1t
   - pandas=1.1.3
   - parallel=20230122
   - pip=20.2.4
@@ -21,7 +23,7 @@ dependencies:
   - pot=0.7.0
   - progressbar=2.5
   - pysam=0.16.0.1
-  - python=3.8.6
+  - python=3.8.15
   - pyyaml=5.3.1
   - r-adaptivetau=2.2_3
   - r-argparser=0.6
