updated to v3 of the painting

--- a/.gitignore
+++ b/.gitignore
@@ -30,6 +30,7 @@ data/1240k/
 data/310320recomb_map/
 data/Ancestral_paths/
 data/Ancestral_paths_new/
+data/ancestral_paths_v3/
 data/alba/
 data/mathieson/
 data/merged_final/
