--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 *.Rproj
 *.bak
 *.xlsx
+*.zip
 *ccr5*
 *tmp*
 .DS_Store
@@ -40,7 +41,7 @@ data/neo.impute/
 data/neo.likelihoods/
 data/ukbb/NealeV2/
 ensembl/
-figs
+figs*
 gl/
 gwascat/
 haps/
